Fix action buttons alignment on cluster list, add margin between buttons

--- a/shared/components/GenericList/GenericList.scss
+++ b/shared/components/GenericList/GenericList.scss
@@ -78,7 +78,8 @@
   }
 
   .fd-table .list-actions {
-    button {
+    > button,
+    > .actions-tooltip {
       margin-top: -12px;
       margin-bottom: -12px;
     }
